[android] Implement Light, Dark, and System modes on android(Auto)
closes organicmaps#749

Changed from the existing night modes (on, off, auto), to "appearence"
modes:
	- Light;
	- Dark;
	- System;

System mode follows whatever mode the user's device is in. This
implementation works for both normal android and AndroidAuto.

Main changes:
	- added necessary strings to XML files;
	- changed the position and option names of the "map style
	  preferences";
	- implemented system mode, and some helper methods on
	  ThemeSwitcher.java and ThemeUtils.java;
	- added uiMode changes detection to all activities;
	- removed "auto" mode implementation;

Signed-off-by: Sebastiao Sousa <sebastiao.sousa@tecnico.ulisboa.pt>
Co-authored-by: Francisco Nael Salgado <francisco.nael.salgado@tecnico.ulisboa.pt>

--- a/android/app/src/main/res/values/donottranslate.xml
+++ b/android/app/src/main/res/values/donottranslate.xml
@@ -52,7 +52,7 @@
   <!-- UI themes -->
   <string name="theme_default" translatable="false">default</string>
   <string name="theme_night" translatable="false">night</string>
-  <string name="theme_auto" translatable="false">auto</string>
+  <string name="theme_follow_system" translatable="false">follow system</string>
 
   <!-- Tags -->
   <string name="tag_menu_collapse" translatable="false">collapse</string>
