--- a/android/app/src/main/res/values/string-arrays.xml
+++ b/android/app/src/main/res/values/string-arrays.xml
@@ -23,18 +23,16 @@
     <item>0</item>
     <item>1</item>
   </string-array>
-
-  <string-array name="map_style">
-    <item>@string/off</item>
-    <item>@string/on</item>
-    <item>@string/auto</item>
+  <string-array name="appearance">
+    <item>@string/light</item>
+    <item>@string/dark</item>
+    <item>@string/system</item>
   </string-array>
-
-  <string-array name="map_style_values"
+  <string-array name="appearance_values"
                 translatable="false">
     <item>@string/theme_default</item>
     <item>@string/theme_night</item>
-    <item>@string/theme_auto</item>
+    <item>@string/theme_follow_system</item>
   </string-array>
 
   <string-array name="speed_cameras">
